# NS_runtime

./: .gitignore  CLAUDE.md  README.backup.md  README.md  pyproject.toml  setup.sh  start.sh  test_config.py
backend/: history_db.py  main.py
configs/: README_PaddleOCR.md  global_settings.json
docs/: user_manual.html
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: api.ts  config.ts  index.css
frontend/src/components/: CameraCard.tsx  DirectoryPickerModal.tsx  LineModal.tsx  RenameProductModal.tsx  S3ConfigModal.tsx  Sidebar.tsx  SwitchProductAllModal.tsx
frontend/src/pages/: Admin.tsx  Collection.tsx  Dashboard.tsx  History.tsx  Storage.tsx
frontend/src/types/: index.ts
inspection_framework/: config.py  datamanager.py  detector.py  detector_paddleocr.py  detector_paddlert.py  inspection_worker.py  rejecter.py  test_rejecter.py  test_run_local.py
tools/: build_trt.sh  export_onnx.sh
workers/weights/: coco.yaml
workers/worker-01/: config.json  run_local.py
workers/worker-02/: config.json  run_local.py
workers/worker-03/: config.json  run_local.py
workers/worker-04/: config.json  run_local.py
workers/worker-05/: config.json  run_local.py
workers/worker-06/: config.json  run_local.py
workers/worker-07/: config.json  run_local.py
workers/worker-08/: config.json  run_local.py
workers/worker-09/: config.json  run_local.py
workers/worker-10/: config.json  run_local.py
