[project]
name = "ns-runtime"
version = "0.1.0"
description = "Real-time AI vision inspection system for factory production lines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.58",
    "fastapi>=0.133.0",
    "opencv-python>=4.13.0.92",
    "paddleocr>=3.4.0",
    "pypylon>=26.1.0",
    "python-multipart>=0.0.22",
    "ultralytics>=8.4.16",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
